--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">Affirmations</string>
-    <string name="affirmation1">I am strong.</string>
-    <string name="affirmation2">I believe in myself.</string>
-    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
-    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
-    <string name="affirmation5">I have so much to be grateful for.</string>
-    <string name="affirmation6">Good things are always coming into my life.</string>
-    <string name="affirmation7">New opportunities await me at every turn.</string>
-    <string name="affirmation8">I have the courage to follow my heart.</string>
-    <string name="affirmation9">Things will unfold at precisely the right time.</string>
-    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
+    <string name="affirmation1">Я сильний.</string>
+    <string name="affirmation2">Я вірю в себе.</string>
+    <string name="affirmation3">Кожен день – це нова можливість розвиватися та ставати кращою версією себе.</string>
+    <string name="affirmation4">Кожен виклик у моєму житті – це можливість вчитися.</string>
+    <string name="affirmation5">Я так багато за що маю бути вдячним.</string>
+    <string name="affirmation6">Хороші речі завжди приходять у моє життя.</string>
+    <string name="affirmation7">Нові можливості чекають мене на кожному кроці.</string>
+    <string name="affirmation8">Я маю мужність слідувати своєму серцю.</string>
+    <string name="affirmation9">Події розгортатимуться точно в потрібний час.</string>
+    <string name="affirmation10">Я буду присутній в усьому, що принесе цей день.</string>
 </resources>
